--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="header-content-inner">
           <h1>The world's first  innovation-first VC firm</h1>
           <hr>
-          <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
+          <p>Investing in the future of innovation and expotential technological change via a cource of growth hacking to disruption. Elastically scaled. On demand. In the cloud.</p>
           <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
       </div>
@@ -82,7 +82,7 @@
           <div class="col-lg-8 col-lg-offset-2 text-center">
             <h2 class="section-heading">Have you got what it takes?</h2>
             <hr class="light">
-            <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
+            <p class="text-faded">Here's to the crazy ones, the misfits, the rebels, the troublemakers, the round pegs in the square holes... the ones who see things differently -- they're not fond of rules... You can quote them, disagree with them, glorify or vilify them, but the only thing you can't do is ignore them because they change things... they push the human race forward, and while some may see them as the crazy ones, we see genius, because the ones who are crazy enough to think that they can change the world, are the ones who do. - Steve Wozniak</p>
             <a href="#" class="btn btn-default btn-xl">Get Started!</a>
           </div>
         </div>
@@ -102,30 +102,30 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-              <h3>Sturdy Templates</h3>
-              <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+              <i class="fa fa-4x fa-line-chart wow bounceIn text-primary"></i>
+              <h3>Growth Hacking</h3>
+              <p class="text-muted">Access to our creativity, analytical thinking, and social metrics to better your  start-up.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-              <h3>Ready to Ship</h3>
-              <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+              <i class="fa fa-4x fa-users wow bounceIn text-primary" data-wow-delay=".2s"></i>
+              <h3>Mentorship</h3>
+              <p class="text-muted">Access to our millions of investors, from around the world, in every single industry.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-              <h3>Up to Date</h3>
-              <p class="text-muted">We update dependencies to keep things fresh.</p>
+              <i class="fa fa-4x fa-rocket wow bounceIn text-primary" data-wow-delay=".1s"></i>
+              <h3>Disruption</h3>
+              <p class="text-muted">Innovation that helps create a new market and value network, and disrupts an existing market.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-              <h3>Made with Love</h3>
-              <p class="text-muted">You have to make your websites with love these days!</p>
+              <i class="fa fa-4x fa-briefcase wow bounceIn text-primary" data-wow-delay=".3s"></i>
+              <h3>Investment</h3>
+              <p class="text-muted">We provide the money so you can focus on building products and non-profitable businesses.</p>
             </div>
           </div>
         </div>
@@ -244,15 +244,15 @@
           <div class="col-lg-8 col-lg-offset-2 text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
             <hr class="primary">
-            <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <p>Existing communications standards such as phone numbers and email addresses are too mainstream for us. Contact us today using whatever is the latest and most hip communication platform of this week.</p>
           </div>
           <div class="col-lg-4 col-lg-offset-2 text-center">
-            <i class="fa fa-phone fa-3x wow bounceIn"></i>
-            <p>123-456-6789</p>
+            <i class="fa fa-twitter fa-3x wow bounceIn"></i>
+            <p><a href="https://twitter.com/BanterVentures" target="_blank">Twitter</a></p>
           </div>
           <div class="col-lg-4 text-center">
-            <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-            <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+            <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <p><a href="https://www.facebook.com/banterventures" target="_blank">Facebook</a></p>
           </div>
         </div>
       </div>
@@ -264,8 +264,6 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/FitText.js/1.1/jquery.fittext.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-
-    <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
 
   </body>
