added background track

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="header-content-inner">
           <h1>The world's first  innovation-first VC firm</h1>
           <hr>
-          <p>Investing in the future of innovation and expotential technological change via a cource of growth hacking to disruption. Elastically scaled. On demand. In the cloud.</p>
+          <p>Investing in the future of innovation and exponential technological change via a course of growth hacking to disruption. Elastically scaled. On demand. In the cloud.</p>
           <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
       </div>
