--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
-  <meta name="author" content="">
+
+  <!-- seo -->
   <title>Banter Ventures</title>
+  <link rel="icon" href="media/favicon.ico">
+  <meta name="description" content="Investing in the future of innovation and exponential technological change via a course of growth hacking to disruption. Elastically scaled. On demand. In the cloud.">
+  <meta property="og:title" content="The world's first  innovation-first VC firm" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://banter.ventures" />
+  <meta property="og:image" content="http://banter.ventures/media/og-image.png" />
 
   <!-- css -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" type="text/css">
@@ -70,7 +76,7 @@
           <h1>The world's first  innovation-first VC firm</h1>
           <hr>
           <p>Investing in the future of innovation and exponential technological change via a course of growth hacking to disruption. Elastically scaled. On demand. In the cloud.</p>
-          <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
       </div>
     </header>
