--- a/index.html
+++ b/index.html
@@ -8,12 +8,31 @@
 
   <!-- seo -->
   <title>Banter Ventures</title>
-  <link rel="icon" href="media/favicon.ico">
   <meta name="description" content="Investing in the future of innovation and exponential technological change via a course of growth hacking to disruption. Elastically scaled. On demand. In the cloud.">
   <meta property="og:title" content="The world's first  innovation-first VC firm" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://banter.ventures" />
   <meta property="og:image" content="http://banter.ventures/media/og-image.png" />
+
+  <link rel="apple-touch-icon" sizes="57x57" href="media/favi/apple-touch-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="media/favi/apple-touch-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="media/favi/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="media/favi/apple-touch-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="media/favi/apple-touch-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="media/favi/apple-touch-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="media/favi/apple-touch-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="media/favi/apple-touch-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="media/favi/apple-touch-icon-180x180.png">
+  <link rel="icon" type="image/png" href="media/favi/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="media/favi/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="media/favi/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="media/favi/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="media/favi/manifest.json">
+  <link rel="shortcut icon" href="media/favi/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-TileImage" content="media/favi/mstile-144x144.png">
+  <meta name="msapplication-config" content="media/favi/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- css -->
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" type="text/css">
