--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" type="text/css">
   <link rel="stylesheet" href="http://daneden.github.io/animate.css/animate.min.css" type="text/css">
   <link rel="stylesheet" href="css/creative.css" type="text/css">
+  <link rel="stylesheet" href="css/more.css" type="text/css">
 
   <!-- fonts -->
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -262,6 +263,37 @@
         </div>
       </div>
     </aside>
+
+    <section class="bg-primary" id="team">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 text-center">
+            <h2 class="section-heading">Team</h2>
+            <hr class="light">
+            <hr class="primary">
+            <p>Our crack team is made up of only <em>true</em> innovators.</p>
+          </div>
+        </div>
+        <div class="row people">
+          <div class="col-lg-2 col-lg-offset-3">
+            <img src="https://avatars3.githubusercontent.com/u/3677891?v=3&s=460" />
+          </div>
+          <div class="col-lg-2 col-lg-offset-2">
+            <img src="https://avatars3.githubusercontent.com/u/3677891?v=3&s=460" />
+          </div>
+        </div>
+        <div class="row names">
+          <div class="col-lg-2 col-lg-offset-3 text-center">
+            <div class="name">Jamie Davies</div>
+            <div class="title">Founding Partner</div>
+          </div>
+          <div class="col-lg-2 col-lg-offset-2 text-center">
+            <div class="name">Manoj Nathwani</div>
+            <div class="title">Founding Partner</div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <section id="contact">
       <div class="container">
