--- a/index.html
+++ b/index.html
@@ -286,10 +286,12 @@
           <div class="col-lg-2 col-lg-offset-3 text-center">
             <div class="name">Jamie Davies</div>
             <div class="title">Founding Partner</div>
+            <div class="twitter"><a href="http://twitter.com/viralpickaxe" target=_blank>@viralpickaxe</a></div>
           </div>
           <div class="col-lg-2 col-lg-offset-2 text-center">
             <div class="name">Manoj Nathwani</div>
             <div class="title">Founding Partner</div>
+            <div class="twitter"><a href="http://twitter.com/Man0jN" target=_blank>@Man0jN</a></div>
           </div>
         </div>
       </div>
