Updated team photos

--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
         </div>
         <div class="row people">
           <div class="col-lg-2 col-lg-offset-3">
-            <img src="https://avatars3.githubusercontent.com/u/3677891?v=3&s=460" />
+            <img src="media/team/jamie.png" />
           </div>
           <div class="col-lg-2 col-lg-offset-2">
-            <img src="https://avatars3.githubusercontent.com/u/3677891?v=3&s=460" />
+            <img src="media/team/manoj.png" />
           </div>
         </div>
         <div class="row names">
