Fixed responsiveness of team section

--- a/index.html
+++ b/index.html
@@ -73,10 +73,13 @@
             <a class="page-scroll" href="#about">About</a>
           </li>
           <li>
-            <a class="page-scroll" href="#services">Services</a>
+            <a class="page-scroll" href="#services">How We Help</a>
           </li>
           <li>
             <a class="page-scroll" href="#portfolio">Portfolio</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#team">Team</a>
           </li>
           <li>
             <a class="page-scroll" href="#contact">Contact</a>
@@ -275,20 +278,14 @@
           </div>
         </div>
         <div class="row people">
-          <div class="col-lg-2 col-lg-offset-3">
+          <div class="col-lg-2 col-lg-offset-3 col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-8 col-xs-offset-2 text-center">
             <img src="media/team/jamie.png" />
-          </div>
-          <div class="col-lg-2 col-lg-offset-2">
-            <img src="media/team/manoj.png" />
-          </div>
-        </div>
-        <div class="row names">
-          <div class="col-lg-2 col-lg-offset-3 text-center">
             <div class="name">Jamie Davies</div>
             <div class="title">Founding Partner</div>
             <div class="twitter"><a href="http://twitter.com/viralpickaxe" target=_blank>@viralpickaxe</a></div>
           </div>
-          <div class="col-lg-2 col-lg-offset-2 text-center">
+          <div class="col-lg-2 col-lg-offset-2 col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-8 col-xs-offset-2 text-center">
+            <img src="media/team/manoj.png" />
             <div class="name">Manoj Nathwani</div>
             <div class="title">Founding Partner</div>
             <div class="twitter"><a href="http://twitter.com/Man0jN" target=_blank>@Man0jN</a></div>
