--- a/index.html
+++ b/index.html
@@ -302,13 +302,17 @@
             <hr class="primary">
             <p>Existing communications standards such as phone numbers and email addresses are too mainstream for us. Contact us today using whatever is the latest and most hip communication platform of this week.</p>
           </div>
-          <div class="col-lg-4 col-lg-offset-2 text-center">
+          <div class="col-lg-3 col-lg-offset-1 text-center">
             <i class="fa fa-twitter fa-3x wow bounceIn"></i>
-            <p><a href="https://twitter.com/BanterVentures" target="_blank">Twitter</a></p>
+            <p><a href="https://twitter.com/BanterVentures" target="_blank">@BanterVentures</a></p>
           </div>
           <div class="col-lg-4 text-center">
+            <img class="wow bounceIn yoicon" data-wow-delay=".1s" src="media/yo.png" />
+            <p>@banterventures</p>
+          </div>
+          <div class="col-lg-3 text-center">
             <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-            <p><a href="https://www.facebook.com/banterventures" target="_blank">Facebook</a></p>
+            <p><a href="https://www.facebook.com/banterventures" target="_blank">/banterventures</a></p>
           </div>
         </div>
       </div>
