--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 col-lg-offset-2 text-center">
-            <h2 class="section-heading">Team</h2>
+            <h2 class="section-heading">The Team</h2>
             <hr class="light">
             <hr class="primary">
             <p>Our crack team is made up of only <em>true</em> innovators.</p>
