--- a/index.html
+++ b/index.html
@@ -164,96 +164,79 @@
     <section class="no-padding" id="portfolio">
       <div class="container-fluid">
         <div class="row no-gutter">
+
+          <!-- Joes Boxes -->
           <div class="col-lg-4 col-sm-6">
-            <a href="#" class="portfolio-box">
-              <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/1.jpg" class="img-responsive" alt="">
+            <a href="http://www.joe-needs.help/" class="portfolio-box" target="_blank">
+              <img src="media/startups/joes-boxes.png" class="img-responsive">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
+                  <div class="project-name">Joes Boxes</div>
                 </div>
               </div>
             </a>
           </div>
+
+          <!-- mockup -->
           <div class="col-lg-4 col-sm-6">
-            <a href="#" class="portfolio-box">
-              <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/2.jpg" class="img-responsive" alt="">
+            <a href="#" class="portfolio-box" target="_blank">
+              <img src="http://placehold.it/650x350/1abc9c/ffffff&text=coming soon..." class="img-responsive">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
+                  <div class="project-name">Coming soon...</div>
                 </div>
               </div>
             </a>
           </div>
+
+          <!-- mockup -->
           <div class="col-lg-4 col-sm-6">
-            <a href="#" class="portfolio-box">
-              <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/3.jpg" class="img-responsive" alt="">
+            <a href="#" class="portfolio-box" target="_blank">
+              <img src="http://placehold.it/650x350/3498db/ffffff&text=coming soon..." class="img-responsive">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
+                  <div class="project-name">Coming soon...</div>
                 </div>
               </div>
             </a>
           </div>
+
+          <!-- mockup -->
           <div class="col-lg-4 col-sm-6">
-            <a href="#" class="portfolio-box">
-              <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/4.jpg" class="img-responsive" alt="">
+            <a href="#" class="portfolio-box" target="_blank">
+              <img src="http://placehold.it/650x350/9b59b6/ffffff&text=coming soon..." class="img-responsive">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
+                  <div class="project-name">Coming soon...</div>
                 </div>
               </div>
             </a>
           </div>
+
+          <!-- mockup -->
           <div class="col-lg-4 col-sm-6">
-            <a href="#" class="portfolio-box">
-              <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/5.jpg" class="img-responsive" alt="">
+            <a href="#" class="portfolio-box" target="_blank">
+              <img src="http://placehold.it/650x350/f1c40f/ffffff&text=coming soon..." class="img-responsive">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
+                  <div class="project-name">Coming soon...</div>
                 </div>
               </div>
             </a>
           </div>
+
+          <!-- mockup -->
           <div class="col-lg-4 col-sm-6">
-            <a href="#" class="portfolio-box">
-              <img src="http://ironsummitmedia.github.io/startbootstrap-creative/img/portfolio/6.jpg" class="img-responsive" alt="">
+            <a href="#" class="portfolio-box" target="_blank">
+              <img src="http://placehold.it/650x350/e74c3c/ffffff&text=coming soon..." class="img-responsive">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
+                  <div class="project-name">Coming soon...</div>
                 </div>
               </div>
             </a>
           </div>
+
         </div>
       </div>
     </section>
@@ -274,21 +257,21 @@
             <h2 class="section-heading">The Team</h2>
             <hr class="light">
             <hr class="primary">
-            <p>Our crack team is made up of only <em>true</em> innovators.</p>
+            <p>Banter Ventures offer investors access to selected, high quality investment opportunities that offer the potential of high growth and dank reward. With a proven track record of over 1X return. Become a part of Banter Ventures via our incubator, fund or individual investment opportunities.</p>
           </div>
         </div>
-        <div class="row people">
-          <div class="col-lg-2 col-lg-offset-3 col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-8 col-xs-offset-2 text-center">
-            <img src="media/team/jamie.png" />
-            <div class="name">Jamie Davies</div>
-            <div class="title">Founding Partner</div>
-            <div class="twitter"><a href="http://twitter.com/viralpickaxe" target=_blank>@viralpickaxe</a></div>
-          </div>
-          <div class="col-lg-2 col-lg-offset-2 col-md-3 col-md-offset-2 col-sm-3 col-sm-offset-2 col-xs-8 col-xs-offset-2 text-center">
+        <div class="row people text-center">
+          <div class="col-lg-2 col-lg-offset-3">
             <img src="media/team/manoj.png" />
             <div class="name">Manoj Nathwani</div>
             <div class="title">Founding Partner</div>
             <div class="twitter"><a href="http://twitter.com/Man0jN" target=_blank>@Man0jN</a></div>
+          </div>
+          <div class="col-lg-2 col-lg-offset-2">
+            <img src="media/team/jamie.png" />
+            <div class="name">Jamie Davies</div>
+            <div class="title">Founding Partner</div>
+            <div class="twitter"><a href="http://twitter.com/viralpickaxe" target=_blank>@viralpickaxe</a></div>
           </div>
         </div>
       </div>
@@ -302,17 +285,20 @@
             <hr class="primary">
             <p>Existing communications standards such as phone numbers and email addresses are too mainstream for us. Contact us today using whatever is the latest and most hip communication platform of this week.</p>
           </div>
+        </div>
+      <br><br>
+        <div class="row">
           <div class="col-lg-3 col-lg-offset-1 text-center">
-            <i class="fa fa-twitter fa-3x wow bounceIn"></i>
+            <i class="fa fa-twitter-square fa-3x wow bounceIn"></i>
             <p><a href="https://twitter.com/BanterVentures" target="_blank">@BanterVentures</a></p>
           </div>
           <div class="col-lg-4 text-center">
-            <img class="wow bounceIn yoicon" data-wow-delay=".1s" src="media/yo.png" />
-            <p>@banterventures</p>
+            <img class="wow bounceIn yoicon" data-wow-delay=".1s" src="media/yo.png"/>
+            <p><a href="https://www.justyo.co/BANTERVENTURES/" target="_blank">@banterventures</a></p>
           </div>
           <div class="col-lg-3 text-center">
-            <i class="fa fa-facebook fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-            <p><a href="https://www.facebook.com/banterventures" target="_blank">/banterventures</a></p>
+            <i class="fa fa-facebook-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <p><a href="https://www.facebook.com/banterventures" target="_blank">@banterventures</a></p>
           </div>
         </div>
       </div>
