--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <h2 class="section-heading">Have you got what it takes?</h2>
             <hr class="light">
             <p class="text-faded">Here's to the crazy ones, the misfits, the rebels, the troublemakers, the round pegs in the square holes... the ones who see things differently -- they're not fond of rules... You can quote them, disagree with them, glorify or vilify them, but the only thing you can't do is ignore them because they change things... they push the human race forward, and while some may see them as the crazy ones, we see genius, because the ones who are crazy enough to think that they can change the world, are the ones who do. - Steve Wozniak</p>
-            <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+            <a href="http://goo.gl/forms/dSU7h7eRoC" class="btn btn-default btn-xl" target=_blank>Get Started!</a>
           </div>
         </div>
       </div>
@@ -245,7 +245,7 @@
       <div class="container text-center">
         <div class="call-to-action">
           <h2>Looking to change the world?</h2>
-          <a href="#" class="btn btn-default btn-xl wow tada">Apply Now!</a>
+          <a href="http://goo.gl/forms/dSU7h7eRoC" class="btn btn-default btn-xl wow tada" target=_blank>Apply Now!</a>
         </div>
       </div>
     </aside>
