changed non-profit to dank

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="service-box">
               <i class="fa fa-4x fa-briefcase wow bounceIn text-primary" data-wow-delay=".3s"></i>
               <h3>Investment</h3>
-              <p class="text-muted">We provide the money so you can focus on building products and non-profitable businesses.</p>
+              <p class="text-muted">We provide the money so you can focus on building products and dank businesses.</p>
             </div>
           </div>
         </div>
