Added new team members

--- a/index.html
+++ b/index.html
@@ -206,17 +206,34 @@
           </div>
         </div>
         <div class="row people text-center">
-          <div class="col-lg-2 col-lg-offset-3">
-            <img src="media/team/manoj.png" />
+          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-3 col-md-offset-3 col-sm-offset-3">
+            <img src="media/team/manoj.jpg" />
             <div class="name">Manoj Nathwani</div>
             <div class="title">Founding Partner</div>
             <div class="twitter"><a href="http://twitter.com/Man0jN" target=_blank>@Man0jN</a></div>
           </div>
-          <div class="col-lg-2 col-lg-offset-2">
-            <img src="media/team/jamie.png" />
+          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
+            <img src="media/team/jamie.jpg" />
             <div class="name">Jamie Davies</div>
             <div class="title">Founding Partner</div>
             <div class="twitter"><a href="http://twitter.com/viralpickaxe" target=_blank>@viralpickaxe</a></div>
+          </div>
+        </div>
+        <div class="row people text-center space">
+          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
+            <img src="media/team/sidd.jpg" />
+            <div class="name">Siddharth V.</div>
+            <div class="title">Partner</div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+            <img src="media/team/shlomie.jpg" />
+            <div class="name">Shlomie L.</div>
+            <div class="title">Partner</div>
+          </div>
+          <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+            <img src="media/team/lexi.jpg" />
+            <div class="name">Lexi H.</div>
+            <div class="title">Partner</div>
           </div>
         </div>
       </div>
