--- a/index.html
+++ b/index.html
@@ -224,16 +224,19 @@
             <img src="media/team/sidd.jpg" />
             <div class="name">Siddharth V.</div>
             <div class="title">Partner</div>
+            <div class="twitter"><a href="http://twitter.com/siddvee" target=_blank>@Siddvee</a></div>
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
             <img src="media/team/shlomie.jpg" />
             <div class="name">Shlomie L.</div>
             <div class="title">Partner</div>
+            <div class="twitter"><a href="http://twitter.com/Shlibness" target=_blank>@Shlibness</a></div>
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
             <img src="media/team/lexi.jpg" />
             <div class="name">Lexi H.</div>
             <div class="title">Partner</div>
+            <div class="twitter"><a href="http://twitter.com/lexi_ht" target=_blank>@lexi_ht</a></div>
           </div>
         </div>
       </div>
