--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <img src="media/team/manoj.jpg" />
             <div class="name">Manoj Nathwani</div>
             <div class="title">Founding Partner</div>
-            <div class="twitter"><a href="http://twitter.com/Man0jN" target=_blank>@Man0jN</a></div>
+            <div class="twitter"><a href="http://twitter.com/Man0jN" target=_blank>@Man0jn</a></div>
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
             <img src="media/team/jamie.jpg" />
@@ -224,13 +224,13 @@
             <img src="media/team/sidd.jpg" />
             <div class="name">Siddharth V.</div>
             <div class="title">Partner</div>
-            <div class="twitter"><a href="http://twitter.com/siddvee" target=_blank>@Siddvee</a></div>
+            <div class="twitter"><a href="http://twitter.com/siddvee" target=_blank>@siddvee</a></div>
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
             <img src="media/team/shlomie.jpg" />
             <div class="name">Shlomie L.</div>
             <div class="title">Partner</div>
-            <div class="twitter"><a href="http://twitter.com/Shlibness" target=_blank>@Shlibness</a></div>
+            <div class="twitter"><a href="http://twitter.com/Shlibness" target=_blank>@shlibness</a></div>
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
             <img src="media/team/lexi.jpg" />
