added github contact + fixed yo icon

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <aside class="bg-dark" id="getstarted">
       <div class="container text-center">
         <div class="call-to-action">
-          <h2>Looking to change the world?</h2>
+          <h2>Looking to change the world? <b>Join us.</b></h2>
           <div class="btn-group wow tada" role="group" aria-label="...">
             <a href="http://goo.gl/forms/HYOm5G7Rrp" class="btn btn-default btn-xl" target=_blank>Startups</a>
             <a href="http://goo.gl/forms/6uoA2ImA22" class="btn btn-default btn-xl" target=_blank>Investors</a>
@@ -251,21 +251,28 @@
             <p>Existing communications standards such as phone numbers and email addresses are too mainstream for us. Contact us today using whatever is the latest and most hip communication platform of this week.</p>
           </div>
         </div>
-      <br><br>
+
+        <br><br>
+
         <div class="row">
-          <div class="col-lg-3 col-lg-offset-1 text-center">
+          <div class="col-lg-2 col-lg-offset-2 text-center">
             <i class="fa fa-twitter-square fa-3x wow bounceIn"></i>
             <p><a href="https://twitter.com/BanterVentures" target="_blank">@BanterVentures</a></p>
           </div>
-          <div class="col-lg-4 text-center">
-            <img class="wow bounceIn yoicon" data-wow-delay=".1s" src="media/yo.png"/>
-            <p><a href="https://www.justyo.co/BANTERVENTURES/" target="_blank">@banterventures</a></p>
-          </div>
-          <div class="col-lg-3 text-center">
+          <div class="col-lg-2 text-center">
             <i class="fa fa-facebook-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-            <p><a href="https://www.facebook.com/banterventures" target="_blank">@banterventures</a></p>
+            <p><a href="https://www.facebook.com/banterventures" target="_blank">@BanterVentures</a></p>
+          </div>
+          <div class="col-lg-2 text-center">
+            <img class="wow bounceIn yoicon" data-wow-delay=".1s" src="media/yo.png"/>
+            <p><a href="https://www.justyo.co/BANTERVENTURES/" target="_blank">@BanterVentures</a></p>
+          </div>
+          <div class="col-lg-2 text-center">
+            <i class="fa fa-git-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+            <p><a href="https://github.com/BanterVentures" target="_blank">@BanterVentures</a></p>
           </div>
         </div>
+
       </div>
     </section>
 
