update contact us to lowercase

--- a/index.html
+++ b/index.html
@@ -257,19 +257,19 @@
         <div class="row">
           <div class="col-lg-2 col-lg-offset-2 text-center">
             <i class="fa fa-twitter-square fa-3x wow bounceIn"></i>
-            <p><a href="https://twitter.com/BanterVentures" target="_blank">@BanterVentures</a></p>
+            <p><a href="https://twitter.com/BanterVentures" target="_blank">@banterventures</a></p>
           </div>
           <div class="col-lg-2 text-center">
             <i class="fa fa-facebook-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-            <p><a href="https://www.facebook.com/banterventures" target="_blank">@BanterVentures</a></p>
+            <p><a href="https://www.facebook.com/banterventures" target="_blank">@banterventures</a></p>
           </div>
           <div class="col-lg-2 text-center">
             <img class="wow bounceIn yoicon" data-wow-delay=".1s" src="media/yo.png"/>
-            <p><a href="https://www.justyo.co/BANTERVENTURES/" target="_blank">@BanterVentures</a></p>
+            <p><a href="https://www.justyo.co/BANTERVENTURES/" target="_blank">@banterventures</a></p>
           </div>
           <div class="col-lg-2 text-center">
             <i class="fa fa-git-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-            <p><a href="https://github.com/BanterVentures" target="_blank">@BanterVentures</a></p>
+            <p><a href="https://github.com/BanterVentures" target="_blank">@banterventures</a></p>
           </div>
         </div>
 
