fixed twitter link for investors/mentors

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
               {% for x in investors %}
               <div class="col-xs-3">
-                <a href="https://twitter.com/{{ x.twtter }}" class="portfolio-box" target="_blank">
+                <a href="https://twitter.com/{{ x.twitter }}" class="portfolio-box" target="_blank">
                   <img src="{{ x.img }}">
                   <div class="portfolio-box-caption">
                     <div class="portfolio-box-caption-content">
@@ -280,7 +280,7 @@
 
                 {% for x in mentors %}
                 <div class="col-xs-3">
-                  <a href="https://twitter.com/{{ x.twtter }}" class="portfolio-box" target="_blank">
+                  <a href="https://twitter.com/{{ x.twitter }}" class="portfolio-box" target="_blank">
                     <img src="{{ x.img }}">
                     <div class="portfolio-box-caption">
                       <div class="portfolio-box-caption-content">
