fixed images to refer to them locally

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             <div class="twitter"><a href="http://twitter.com/siddvee" target=_blank>@siddvee</a></div>
           </div>
           <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
-            <img src="media/team/shlomie2.jpg" />
+            <img src="media/team/shlomie2z.jpg" />
             <div class="name">Shlomie L.</div>
             <div class="title">Partner</div>
             <div class="twitter"><a href="http://twitter.com/Shlibness" target=_blank>@shlibness</a></div>
