--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           {% for x in startups %}
           <div class="col-lg-4 col-sm-6">
             <a href="{{ x.link }}" class="portfolio-box" target="_blank">
-              <img src="{{ x.image_650x350 }}" class="img-responsive">
+              <img src="{{ x.image }}" class="img-responsive">
               <div class="portfolio-box-caption">
                 <div class="portfolio-box-caption-content">
                   <div class="project-name">{{ x.company_name }}</div>
